Feat: added data.json and main.js

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <p>Hecho con ❤️ en <span>NUCBACRYPTO</span></p>
   </footer>
   <div class="add-modal"></div>
-  <script src="./assets/data.js"></script>
-  <script src="./assets/index.js"></script>
+  <script src="./js/main.js"></script>
+  <script src="./js/cart.js"></script>
 </body>
 
 </html>
