Fix: improved filterController

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <h2>Hot NFTs</h2>
       <!-- categories -->
       <div class="categories">
-        <button class="category active">🎨Todas</button>
+        <button class="category active" data-category="all">🎨Todas</button>
         <button class="category" data-category="futbol">⚽Futbol</button>
         <button class="category" data-category="musica">🎷Música</button>
         <button class="category" data-category="peliculas">🎬Películas</button>
